# nohs

./: .gitignore  CMakeLists.txt  README.md
examples/: hermite_test.cpp  quartic.cpp
include/: nohs.h  nohs_exceptions.h  nohs_optimizer.h
src/: hermite.cpp  optimizer.cpp  solver.cpp
